--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lab8p2_jose_21941105.Lab8P2_Jose_21941105
+main.class=lab8p2_jose_21941105.Carrera
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
